--- a/DeckMaster/Views/UserRole/Create.cshtml
+++ b/DeckMaster/Views/UserRole/Create.cshtml
@@ -8,6 +8,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
+             @*    <input type="text" class="form-control"
+                       value="@ViewBag.SelectedUser"
+                       readonly /> *@
                 @Html.DropDownList("Email",
                          new SelectList(ViewBag.UserSelectList, "Value", "Text",
                          ViewBag.SelectedUser),
